crates/aranya-policy-compiler/tests/data/functions/arg_struct_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
1 | function foo(x struct UndefinedStruct) int {
  |                       ^^^^^^^^^^^^^^^ struct `UndefinedStruct` not defined
